--- a/cv.tex
+++ b/cv.tex
@@ -24,7 +24,7 @@
 \fancyhf{}
 \lfoot{\datestyle Darshan Chaudhary}
 \cfoot{\datestyle \thepage}
-\rfoot{\datestyle May 2017}
+\rfoot{\datestyle April 2018}
 \renewcommand{\headrulewidth}{0.0pt}
 
 % Set parameters and content.
@@ -47,7 +47,7 @@
 \begin{center}
     \namestyle Darshan Chaudhary \\[0.3em]
     \addressstyle Github: github.com/darshanime \ $\cdot$ Phone: +91-7795394755\\
-    Email: darshankchaudhary@gmail.com \ $\cdot$ Web: \url{http://darshanime.github.io}
+    Email: darshankchaudhary@gmail.com \ $\cdot$ Web: \url{https://darshanime.github.io}
 \end{center}
 
 \small
@@ -55,14 +55,20 @@
 
 \section*{Industry Experience}
 
-\subparagraph{Product Development Engineer}
-Appknox $\cdot$ Bangalore, India $\cdot$ 06/2016 - Present (11 mos)
+\subparagraph{Software Developer}
+Draup $\cdot$ Bangalore, India $\cdot$ 06/2017 - Present (11 mos)
 \begin{itemize}
-    \item Maintained Appknox's core backend web app with new features, test suites and bug fixes.
+    \item Build internal services used for making sense of data at scale - company names, location, translation
+    \item Maintained the infrastructure for Draup - using Terraform to provision, Jenkins for CD, Ansible to build
+    \item Maintained Draup platform's core backend web application with new features, bug fixes
+\end{itemize}
+
+\subparagraph{Product Development Engineer}
+Appknox $\cdot$ Bangalore, India $\cdot$ 06/2016 - 06/2017
+\begin{itemize}
     \item Designed and built the internal CRM module used for end-to-end managing of all client accounts.
     \item Designed and implemented a centralized, containerized logs processing pipeline (collection+filtering+visualization) for all the projects of the company based on the Elasticsearch, Logstash, Kibana (ELK) stack. Deployed it using Docker Machine, with Compose for orchestrating the containers.
-    \item Built a tool for conducting employee appraisals with self-evaluation and anonymous feedback on fellow colleagues.
-    \item Built an internal mobile application tracking tool which emails users when metrics of apps subscribed to change.
+    \item Maintained Appknox's core backend web app with new features, test suites and bug fixes.
 \end{itemize}
 
 \subparagraph{Machine Learning Intern}
@@ -71,15 +77,21 @@ Exponentia Datalabs $\cdot$ Mumbai, India $\cdot$ 06/2015 - 12/2015 (6 mos)
     \item Designed an age-gender prediction pipeline for a client wanting to keep a tab on the profile of customers visiting the company owned supermarkets. Implemented the pipeline using caffe(the deep learning framework), OpenCV and SciPy stack. The model read the CCTV feed, used background subtraction algorithms for motion detection, detected faces using Viola-Jones algorithm, passed the cropped faces to a convolution neural network which output age and gender to be stored in MySQL database.
 \end{itemize}
 
-\subparagraph{Summer Intern}
-Essar Power $\cdot$ Jamnagar, India $\cdot$ 05/2014 - 07/2014 (3 mos)
-\begin{itemize}
-    \item Analyzed the organization structure of the company, grievance redressal policies, decision making policies etc. Conducted a feasibility study of Supercritical boilers for the power plant. 
-\end{itemize}
-
 
 \section*{Personal Projects}
 
+
+\subparagraph{Open source contributions}
+Contributed to Heimdall, Sympy, Scrapy, Zulip
+\begin{itemize}
+    \item Made bug fix contributions to Sympy, Scrapy and other open source projects.
+\end{itemize}
+
+\subparagraph{Computer Science notes}
+Open sourced personal computer science notes 
+\begin{itemize}
+    \item Topics included Machine Learning, Operating Systems, Compilers, Golang etc. Well received by community - github.com/darshanime/notes
+\end{itemize}
 
 \subparagraph{Algorithmic agents to play games}
 Implemented Minimax, Expectimax, Markov Decision Processes 
@@ -91,12 +103,6 @@ Implemented Minimax, Expectimax, Markov Decision Processes
 Ability to record visualizations
 \begin{itemize}
     \item Wrote a program which allows defining generalized sandpiles and an initial state to begin with and simulates it till it reaches a stable state with the option to record final state and/or intermediate states.
-\end{itemize}
-
-\subparagraph{Open source contributions}
-Contributed to Sympy, Scrapy
-\begin{itemize}
-    \item Made bug fix contributions to Sympy, Scrapy and other open source projects.
 \end{itemize}
 
 \subparagraph{Mortality Prediction System}
@@ -141,20 +147,20 @@ Secondary School Certificate, (Class X) $\cdot$ 2010
 \section*{Computer Skills}
 
 \begin{itemize}
-    \item \textbf{Languages} \ Python, Java, C, Bash
+    \item \textbf{Languages} \ Python, Go, Java, C, Bash
     \item \textbf{Domains} \ Data Structures, Algorithms, Operating Systems
-    \item \textbf{OSs, Databases} \ GNU/Linux, Apache, Nginx, PostgreSQL, MySQL
-    \item \textbf{Version Control} \ Git/Github
+    \item \textbf{OSs | Databases} \ GNU/Linux | PostgreSQL, MySQL, MongoDB
+    \item \textbf{Version Control} \ Git
     \item \textbf{Cloud Providers} Amazon Web Services, Google Cloud
-    \item \textbf{Containerization} Docker, Docker Compose, Kuberenetes, Deis
+    \item \textbf{Containerization} Docker, Docker Compose
 \end{itemize}
 
 
 \section*{Miscellaneous}
 
 \begin{itemize}
-    \item Co-Organizer of Bangalore Machine Learning Meetup (950 members)
-    \item Gave talks about underfitting and overfitting in machine learning models, mortality prediction using ML at above mentioned meetup
+    \item Organizer of Bangalore Advanced Machine Learning Meetup (1000+ members)
+    \item Gave talks about mortality prediction using ML, reinforcement learning at above mentioned meetup
     \item Maintain a blog at https://darshanime.github.io/til
     \item Emacs evangelist; successfully converted multiple Vim users to Emacs 
     \item Volunteered at the Harvard Model United Nations Conference 2014, Hyderabad
