add kubernetes, open internals

--- a/cv.tex
+++ b/cv.tex
@@ -58,7 +58,7 @@
 \subparagraph{Software Developer}
 Draup $\cdot$ Bangalore, India $\cdot$ 06/2017 - Present (11 mos)
 \begin{itemize}
-    \item Build internal services used for making sense of data at scale - company names, location, translation
+    \item Built internal services used for making sense of data at scale - company names, location, translation
     \item Maintained the infrastructure for Draup - using Terraform to provision, Jenkins for CD, Ansible to build
     \item Maintained Draup platform's core backend web application with new features, bug fixes
 \end{itemize}
@@ -152,15 +152,16 @@ Secondary School Certificate, (Class X) $\cdot$ 2010
     \item \textbf{OSs | Databases} \ GNU/Linux | PostgreSQL, MySQL, MongoDB
     \item \textbf{Version Control} \ Git
     \item \textbf{Cloud Providers} Amazon Web Services, Google Cloud
-    \item \textbf{Containerization} Docker, Docker Compose
+    \item \textbf{Containerization | Orchestrators} Docker, Kubernetes, Docker Compose
 \end{itemize}
 
 
 \section*{Miscellaneous}
 
 \begin{itemize}
-    \item Organizer of Bangalore Advanced Machine Learning Meetup (1000+ members)
+    \item Organizer of Bangalore Advanced Machine Learning Meetup (1600+ members)
     \item Gave talks about mortality prediction using ML, reinforcement learning at above mentioned meetup
+    \item Host of The Open Internals Podcast - https://openinternals.com/
     \item Maintain a blog at https://darshanime.github.io/til
     \item Emacs evangelist; successfully converted multiple Vim users to Emacs 
     \item Volunteered at the Harvard Model United Nations Conference 2014, Hyderabad
