--- a/cv.tex
+++ b/cv.tex
@@ -58,7 +58,7 @@
 \subparagraph{Software Developer}
 Draup $\cdot$ Bangalore, India $\cdot$ 06/2017 - Present (11 mos)
 \begin{itemize}
-    \item Built internal services used for making sense of data at scale - company names, location, translation
+    \item Built internal services used for making sense of data at scale - company names, location and scaled them with Kubernetes.
     \item Maintained the infrastructure for Draup - using Terraform to provision, Jenkins for CD, Ansible to build
     \item Maintained Draup platform's core backend web application with new features, bug fixes
 \end{itemize}
@@ -112,10 +112,10 @@ Outperformed standard industry scores like SAPS, MPM
 SOFA.\@
 \end{itemize}
 
-\subparagraph{Tutorial series for Scrapy}
-Multi-part deep dive tutorial
+\subparagraph{Notes on Computer Science topics}
+github.com/darshanime/notes
 \begin{itemize}
-    \item Wrote a four part tutorial series showing how to scrape data from popular websites. Talked about how to handle websites making heavy use of JavaScript.
+    \item Open sourced detailed personal notes on various computer science topics. Includes topics like Kubernetes, Operating Systems, Networks.
 \end{itemize}
 
 \section*{Education}
@@ -152,7 +152,7 @@ Secondary School Certificate, (Class X) $\cdot$ 2010
     \item \textbf{OSs | Databases} \ GNU/Linux | PostgreSQL, MySQL, MongoDB
     \item \textbf{Version Control} \ Git
     \item \textbf{Cloud Providers} Amazon Web Services, Google Cloud
-    \item \textbf{Containerization | Orchestrators} Docker, Kubernetes, Docker Compose
+    \item \textbf{Containerization | Orchestrators} Docker, Kubernetes, Docker Compose, Cloud Foundry
 \end{itemize}
 
 
