remove time calc

--- a/cv.tex
+++ b/cv.tex
@@ -56,7 +56,7 @@
 \section*{Industry Experience}
 
 \subparagraph{Software Developer}
-Draup $\cdot$ Bangalore, India $\cdot$ 06/2017 - Present (11 mos)
+Draup $\cdot$ Bangalore, India $\cdot$ 06/2017 - Present
 \begin{itemize}
     \item Built internal services used for making sense of data at scale - company names, location and scaled them with Kubernetes.
     \item Maintained the infrastructure for Draup - using Terraform to provision, Jenkins for CD, Ansible to build
