remove duplicate project

--- a/cv.tex
+++ b/cv.tex
@@ -112,12 +112,6 @@ Outperformed standard industry scores like SAPS, MPM
 SOFA.\@
 \end{itemize}
 
-\subparagraph{Notes on Computer Science topics}
-github.com/darshanime/notes
-\begin{itemize}
-    \item Open sourced detailed personal notes on various computer science topics. Includes topics like Kubernetes, Operating Systems, Networks.
-\end{itemize}
-
 \section*{Education}
 
 \subparagraph{BITS Pilani}
@@ -159,7 +153,7 @@ Secondary School Certificate, (Class X) $\cdot$ 2010
 \section*{Miscellaneous}
 
 \begin{itemize}
-    \item Organizer of Bangalore Advanced Machine Learning Meetup (1600+ members)
+    \item Organizer of Bangalore Advanced Machine Learning Meetup - https://www.meetup.com/baml-meetup/
     \item Gave talks about mortality prediction using ML, reinforcement learning at above mentioned meetup
     \item Host of The Open Internals Podcast - https://openinternals.com/
     \item Maintain a blog at https://darshanime.github.io/til
