--- a/cv.tex
+++ b/cv.tex
@@ -1,4 +1,4 @@
-\documentclass[10pt,letterpaper]{article}
+\documentclass{article}
 \usepackage{graphicx}
 \usepackage[colorlinks,urlcolor=blue]{hyperref}
 \usepackage{color}
@@ -9,7 +9,7 @@
 \oddsidemargin=0.0in
 \evensidemargin=0.0in
 \textwidth=6.5in
-\voffset=-0.125in
+\voffset=-0.5in
 \headheight=0.0in
 \topmargin=0.0in
 \textheight=25.0in
@@ -23,7 +23,7 @@
 \fancyhf{}
 \lfoot{\datestyle Darshan Chaudhary}
 \cfoot{\datestyle \thepage}
-\rfoot{\datestyle Aug 2021}
+\rfoot{\datestyle Feb 2022}
 \renewcommand{\headrulewidth}{0.0pt}
 
 % Set parameters and content.
@@ -40,38 +40,38 @@
 
 % Print title.
 \begin{center}
-    \namestyle Darshan Chaudhary \\[0.3em]
-    \addressstyle Phone: +91-7795394755  $\cdot$  Email: darshankchaudhary@gmail.com \\
-    Github: \url{https://github.com/darshanime}
+    \namestyle Darshan Chaudhary \\
+    \addressstyle darshankchaudhary@gmail.com  $\cdot$ +91-7795394755  \\
+    \href{https://github.com/darshanime}{\url{github.com/darshanime}}
 \end{center}
 
 \small
 \section*{Industry Experience}
 
-\subparagraph{Product Engineer}
-Gojek $\cdot$ Bangalore, India $\cdot$ 12/2018 - Present
+\subparagraph{Product Engineer, Gojek}
+Bangalore, India $\cdot$ 12/2018 - Present
 \begin{itemize}
     \item Team Lead for Driver Quality cluster, part of Driver Platform team.
-    \item Built and maintained features that improve the income, quality of the drivers on the platform.
+    \item Built and maintained features that improve the income, quality of the drivers on the platform. 
 \end{itemize}
 
-\subparagraph{Software Developer}
-Draup $\cdot$ Bangalore, India $\cdot$ 06/2017 - 12/2018
+\subparagraph{Software Developer, Draup}
+Bangalore, India $\cdot$ 06/2017 - 12/2018
 \begin{itemize}
-    \item Built internal services used for making sense of company data and scaled them with Kubernetes.
+    \item Built internal services used for making sense of scraped data and scaled them with Kubernetes.
     \item Maintained Draup platform's infrastructure and core web application backend with new features, bug fixes.
 \end{itemize}
 
-\subparagraph{Product Development Engineer}
-Appknox $\cdot$ Bangalore, India $\cdot$ 06/2016 - 06/2017
+\subparagraph{Product Development Engineer, Appknox}
+Bangalore, India $\cdot$ 06/2016 - 06/2017
 \begin{itemize}
-    \item Designed and built the internal CRM app used for end-to-end managing of all client accounts.
+    \item Designed and built the internal CRM app used for end-to-end management of all client accounts.
 \end{itemize}
 
-\subparagraph{Machine Learning Intern}
-Exponentia Datalabs $\cdot$ Mumbai, India $\cdot$ 06/2015 - 12/2015 (6 mos)
+\subparagraph{Machine Learning Intern, Exponentia Datalabs}
+Mumbai, India $\cdot$ 06/2015 - 12/2015
 \begin{itemize}
-    \item Designed an age-gender prediction pipeline for supermarkets using caffe lib, OpenCV and SciPy stack.
+    \item Designed an age prediction pipeline for supermarkets using caffe lib, OpenCV and SciPy stack.
 \end{itemize}
 
 
@@ -79,21 +79,24 @@ Exponentia Datalabs $\cdot$ Mumbai, India $\cdot$ 06/2015 - 12/2015 (6 mos)
 
 
 \subparagraph{oss}
-Collaborator on ArgoCD, CoreDNS projects, contributor to Prometheus
+Collaborator on \href{https://github.com/argoproj/argo-cd/commits?author=darshanime}{ArgoCD}, \href{https://github.com/coredns/coredns/commits?author=darshanime}{CoreDNS}, contributor to \href{https://github.com/prometheus/prometheus/commits?author=darshanime}{Prometheus}
 
-\subparagraph{gofherd}
-Library for running user defined functions with bounded parallelism - github.com/darshanime/gofherd
+\subparagraph{\href{https://github.com/darshanime/gofherd}{gofherd}}
+Library for running user defined functions with bounded parallelism
 
-\subparagraph{netpeek}
-Layer 7 network sniffer - github.com/darshanime/netpeek
+\subparagraph{\href{https://github.com/darshanime/netpeek}{netpeek}}
+Layer 7 network sniffer
 
-\subparagraph{devkube}
-Bootstrap a Kubernetes cluster with custom binaries without kubeadm - github.com/darshanime/devkube
+\subparagraph{\href{https://github.com/darshanime/devkube}{devkube}}
+Bootstrap a Kubernetes cluster with custom binaries without kubeadm
+
+\subparagraph{\href{https://github.com/darshanime/resilience4go}{resilience4go}}
+Fault tolerance library for golang that allows adaptive concurrency limits.
 
 \section*{Education}
 
 \subparagraph{BITS Pilani}
- BE (Hons.) Mechanical Engineering $\cdot$ 08/2012 - 06/2016 $\cdot$ CGPA 7.69/10
+BE (Hons.) Mechanical Engineering $\cdot$ 08/2012 - 06/2016 $\cdot$ CGPA 7.69/10
 
 \subparagraph{BITS Pilani}
 Minors in Finance $\cdot$ 08/2013 - 06/2016
@@ -111,7 +114,7 @@ Secondary School Certificate, (Class X) $\cdot$ 2010 $\cdot$ Percentage: 91.2\%
     \item \textbf{Domains} \ Data Structures, Algorithms, Operating Systems
     \item \textbf{OSs | Databases} \ GNU/Linux | PostgreSQL, MySQL, MongoDB
     \item \textbf{Version Control} \ Git
-    \item \textbf{Cloud Providers} Amazon Web Services, Google Cloud
+    \item \textbf{Cloud Providers} Amazon Web Services, Google Cloud Platform, DigitalOcean
     \item \textbf{Containerization | Orchestrators} Docker, Kubernetes, Docker Compose
 \end{itemize}
 
