add notes to projects

--- a/cv.tex
+++ b/cv.tex
@@ -79,19 +79,22 @@ Mumbai, India $\cdot$ 06/2015 - 12/2015
 
 
 \subparagraph{oss}
-Collaborator on \href{https://github.com/argoproj/argo-cd/commits?author=darshanime}{ArgoCD}, \href{https://github.com/coredns/coredns/commits?author=darshanime}{CoreDNS}, contributor to \href{https://github.com/prometheus/prometheus/commits?author=darshanime}{Prometheus}
+Collaborator on \href{https://github.com/argoproj/argo-cd/commits?author=darshanime}{ArgoCD}, \href{https://github.com/coredns/coredns/commits?author=darshanime}{CoreDNS}, contributor to \href{https://github.com/prometheus/prometheus/commits?author=darshanime}{Prometheus}.
 
 \subparagraph{\href{https://github.com/darshanime/gofherd}{gofherd}}
-Library for running user defined functions with bounded parallelism
+Library for running user defined functions with bounded parallelism.
 
 \subparagraph{\href{https://github.com/darshanime/netpeek}{netpeek}}
-Layer 7 network sniffer
+Layer 7 network sniffer.
 
 \subparagraph{\href{https://github.com/darshanime/devkube}{devkube}}
-Bootstrap a Kubernetes cluster with custom binaries without kubeadm
+Bootstrap a Kubernetes cluster with custom binaries without kubeadm.
 
 \subparagraph{\href{https://github.com/darshanime/resilience4go}{resilience4go}}
 Fault tolerance library for golang that allows adaptive concurrency limits.
+
+\subparagraph{\href{https://github.com/darshanime/notes}{notes}}
+Detailed notes on computer science topics in one page.
 
 \section*{Education}
 
